package com.sda.patterns.behavioral.iterator.challenge;

public enum ItemType {
	WEAPON, RING, POTION
}
